# my_car_ws

./: README.md  catkin_make.sh  start_up.sh
bring_up/cfg/gazebo/robot3/: global_costmap_params.yaml  local_costmap_params.yaml
bring_up/cfg/gazebo/robot4/: global_costmap_params.yaml  local_costmap_params.yaml
bring_up/launch/: gmapping_robot1.launch  teleop_key.launch
bring_up/launch/simulation/: gazebo_multicar.launch  labcar_simulation.launch  stage_multicar.launch  test.launch
bring_up/map/: NCS.pgm  NCS.yaml
bring_up/rviz/: gazebo_multicar.rviz  temp.rviz
communication_node/src/: publisher.cpp
decision_node/src/: tutorial.cpp
libraries/apriltag_ros/config/: tags.yaml
libraries/apriltag_ros/launch/: continuous_detection.launch
robot_library/my_lib/: package.xml
robot_library/my_lib/src/: change_ros_version.cpp
robot_msgs/: CMakeLists.txt
robot_msgs/action/: Display.action
robot_msgs/msg/: Strips_Cmd.msg
service_node/path_coverage/src/: PathPlanningNode.cpp
service_node/separate_goal/src/: separate_goal.cpp
simulation/gazebo/gazebo_pioneer3at/launch/: map.launch  map_N.launch  pioneer.launch  pioneer3at_with_cloister.launch
simulation/gazebo/gazebo_pioneer3at/urdf/: rplidar.xacro
simulation/gazebo/pioneer3at_navigation/launch/: exploring_slam_demo_robot4.launch  robot4_map.launch
simulation/simulation/src/: host_cmd_pub.cpp
task_node/src/: laser_march_task.cpp
zmq_node/: CMakeLists.txt  npm_zmq.md  package.xml
zmq_node/include/draw_node/: behavior_tree.h  draw.h  tree_node.h
zmq_node/include/inference_node/: update_problem.hpp
zmq_node/include/sim_perception/: pddl_add.hpp  sim_perception.hpp
zmq_node/include/zmq_node/: msgs.h  pddl_sub.hpp  zmq_lib.h
zmq_node/src/inference_node/: inference.cpp  update_problem.cpp
zmq_node/src/sim_perception_node/: sim_perception.cpp
zmq_node/src/zmq_node/: pddl_pub.cpp  pddl_sub_back_up.txt
zmq_node/src/zmq_node/pddl_sub_ctl/: README.md  pddl_ctl.cpp  pddl_sub.cpp  tree_node.cpp
zmq_node/src/zmq_node/pddl_sub_ctl/lib/: openGL_lib.cpp
zmq_test/: README.md  npm_zmq.md  package-lock.json  package.json  test.js  test1.js
zmq_test/examples/: planning.md
zmq_test/examples/NCS_new/: domain.txt  problem.txt
zmq_test/examples/Narrow-channel-Search/: domain.txt  problem.txt
zmq_test/examples/NavigationAmongMoveableObstacles/: domain.txt  problem.txt
(+8 files in other folders)
